--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
         </div>
     </main>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=2"></script>
 </body>
 
 </html>
